--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
         </main>
 
         <h2></h2>
-        <p> 
-            <nav>
-                <a href="biography.html"> Click here</a> to view my biography.</p>
-                <a href="https://www.britannica.com/animal/giraffe" target="_blank"> Click here to learn more about giraffes</a>
-            </nav>    
+        <p>    
         <figure> 
-            <img src="GiraffeTorontoZoo.jpg" alt="A photo of me with my favourite animal" width="500" height="300">
-             <figcaption> This is a picture of my visit at the Toronto Zoo in 2021!</figcaption>
+            <img src="GiraffeTorontoZoo.jpg" alt="A photo of me with my favourite animal">
+             <figcaption> This is a picture of my visit to the Toronto Zoo in 2021!</figcaption>
         </figure>
-        <p></p>
-        <ol></ol>
+        <p>Fun Facts About Giraffes</p>
+        <ol>
+            <li>Their tongues are black. </li>
+            <li>They sleep standing up!</li>
+            <li>They use their heads for fighting.</li>
+        </ol>
         <h2></h2>
         <p></p>
         <!-- Youtube Video Embed -->
@@ -47,5 +47,9 @@
         <![endif]-->
         <a><biography class="html"></biography></a>
         <script src="" async defer></script>
+         <nav>
+                <a href="biography.html"> Click here to view my biography.</a> </p>
+                <a href="https://www.britannica.com/animal/giraffe" target="_blank"> Click here to learn more about giraffes</a>
+            </nav> 
     </body>
 </html>
